<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">阳光智园</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_alert">提示信息</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="update_ok">立即下载</string>
    <string name="update_cancle">暂不升级</string>

    <!-- 刷新 -->
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="pull_to_refresh_pull_label">下拉可以刷新</string>
    <string name="pull_to_refresh_pull_label_time"></string>
    <string name="pull_to_refresh_release_label">松开可以刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新中&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="updated_at">上次更新于%1$s前</string>
    <!-- 登陆 -->
    <string name="havazhanghao">已有阳光智园账号</string>
    <string name="edt_hint_username">学籍号/用户名</string>
    <string name="edt_hint_loginpas">登录密码</string>
    <string name="bt_hint_login">登录</string>
    <string name="bt_hint_tuichu">退出当前账号</string>
    <string name="tv_do_regist">立即注册</string>
    <string name="tv_do_forget_pas">忘记密码?</string>
    <string name="edt_password_input">,!@#$%^*()._0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="login_username_hint_st">请输入学籍号</string>
    <string name="login_pas_hint_st">请输入登录密码</string>
    <string name="login_username_hint_sp">请输入注册手机号</string>
    <string name="login_pas_hint_sp">请输入注册密码</string>

    <!-- 购物车 -->
    <string name="shopcart_no_message">您的购物车还没有商品</string>
    <string name="shopcart_guangguang">快去逛逛吧</string>
    <string name="shopcart_goindex">学校商城</string>
    <string name="shopcart_select_all">全选</string>
    <string name="shopcart_zong_e">总额:</string>
    <string name="shopcart_jiesuan">结算</string>

    <!-- Toast提示信息 -->
    <string name="dialog_login_toast">您输入的账户名和密码不匹配，请重新输入</string>
    <string name="dialog_login_watch_video">建议在WIFI条件下观看</string>
    <string name="dialog_login_title">提示</string>
    <string name="dialog_login_cancle">取消</string>
    <string name="dialog_login_ok">确定</string>
    <string name="dialog_login_cache">缓存大小</string>
    <string name="dialog_login_cache_clean">清除完成</string>
    <string name="dialog_chengxu_exit">再按一次退出程序</string>
    <string name="dialog_login_exit">是否退出APP？</string>
    <string name="dialog_login_exit_user">是否退出当前账号?</string>
    <string name="network_message_no">似乎互联网已断开连接</string>
    <string name="advice_toast_submit">感谢您的反馈，未来我们会做得更好!</string>
    <string name="advice_toast_submit_no">反馈内容输入格式为：200个字符以内</string>
    <string name="check_number_toast_send">验证码已经发送</string>
    <string name="check_number_toast_error">验证码输入不正确</string>
    <string name="check_number_toast_input_error">验证码输入错误</string>
    <string name="check_number_toast_phone">手机号输入不正确，请重新输入</string>
    <string name="forget_password_toast">新密码输入不一致</string>
    <string name="forget_password_toast_success">密码修改成功</string>
    <string name="un_connection_with_service">与服务器断开连接</string>
    <string name="no_persion_to_login">用户名不存在</string>
    <string name="update_success">刷新完成</string>
    <string name="set_sound">请先开启消息推送</string>

    <!-- Activity中的文字 -->
    <string name="about_zhiyuan_title_main">关于智园</string>
    <string name="address_choose_title_main_set">收货地址</string>
    <string name="address_choose_title_main_add">增加收货地址</string>
    <string name="address_choose_title_main_newadd">新增收货地址</string>
    <string name="address_choose_title_main_edit">编辑收货地址</string>
    <string name="advice_title_main">意见反馈</string>
    <string name="advice_title_right">发送</string>
    <string name="buy_account_title_main">结算中心</string>
    <string name="buy_success_title_main">订单支付完成</string>
    <string name="change_new_phone_title_main">绑定新手机</string>
    <string name="change_password_title_main">修改密码</string>
    <string name="change_new_number_send">发送验证码</string>
    <string name="change_new_number_send_again">点击重新获取</string>
    <string name="forget_password_title_main">忘记密码</string>
    <string name="group_buy_factory_title_main">厂家信息</string>
    <string name="group_buy_gonggao_title_main">公告详情</string>
    <string name="group_buy_shangpin_title_main">商品详情</string>
    <string name="my_setting_title_main">我的设置</string>
    <string name="advice_shoulifang">受&#160;&#160;理&#160;&#160;方&#160;:</string>
    <string name="advice_jiaoyuju">教育局&#160;&#160;&#160;&#160;</string>
    <string name="student_message_parent_message">家长信息</string>
    <string name="student_message_student_message">学生信息</string>
    <string name="student_message_sex_nv">女</string>
    <string name="student_message_sex_nan">男</string>
    <string name="student_message_sex_weizhi">未知</string>
    <string name="retail_xq_title">商品详情</string>
    <string name="my_order_title">我的订单</string>
    <string name="my_person_message">个人资料</string>
    <string name="update_title">检测到新版本，请下载升级！</string>
    <string name="update_message">版本更新</string>
    <string name="school_gonggao">公告管理</string>
    <string name="my_garden_title">我的智园</string>
    <string name="my_order_manager_title">订单管理</string>
    <string name="my_school_manager_title">学校管理</string>
    <string name="consulution">统购商城</string>
    <string name="school_store">学校商城</string>
    <string name="shoocart">购物车</string>
    <string name="delete">删除</string>
    <string name="shorcart_delete_title">是否删除该商品？</string>
    <string name="no_sd_no_upload">没有存储设备，无法下载最新版本</string>
    <string name="school_message">学校信息</string>
    <string name="tong_zhi_manager">通知管理</string>
    <string name="class_xq">班级详情</string>
    <string name="ge_class_order">各班订单</string>
    <string name="order_xq">订单详情</string>
    <string name="dai_zhifu_order">待支付订单</string>
    <string name="no_buy_student_list">未购买学生列表</string>
    <string name="change_password_old_null">旧密码不能为空</string>
    <string name="change_password_new_null">新密码不能为空</string>
    <string name="change_password_confirm_null">确认新密码不能为空</string>
    <string name="change_password_old_new_equil">新旧密码不能一致</string>
    <string name="save_success">保存成功</string>
    <string name="old_password_input_error">旧密码输入错误</string>
    <string name="change_phone_input_phone">请输入手机号</string>
    <string name="change_phone_check_null">验证码不能为空</string>
     <string name="pay_success">支付成功</string>
     <string name="pay_fail">支付失败</string>
     <string name="pay_on_confirm">支付结果确认中</string>
    

    <!-- 注册 -->
    <string name="regist_student_xueji">学生学籍：</string>
    <string name="regist_student_name">学生姓名：</string>
    <string name="regist_parent_user_name">家长登录号：</string>
    <string name="regist_parent_name">家长姓名：</string>
    <string name="regist_parent_identy">家长身份：</string>
    <string name="regist_parent_phone">家长手机：</string>
    <string name="regist_set_password">设置密码：</string>
    <string name="regist_confirm_password">确认密码：</string>
    <string name="regist_tishi">注册提示：</string>
    <string name="regist_tishi_message">学生用户可用学籍号直接登陆，用户名为学籍号，初始密码为学籍号后六位，家长用户注册时需提供学生的学籍号。</string>
    <string name="regist_title">用户注册</string>
    <string name="regist_success">注册成功</string>
    <string name="regist_xueji">学籍号与学生姓名不匹配，请重新输入</string>
    <string name="regist_name_null">家长姓名不能为空</string>
    <string name="regist_name_ch">输入格式为汉字</string>
    <string name="regist_name_error">学籍号与学生姓名不匹配，请重新输入</string>
    <string name="regist_username_null">家长用户名不能为空</string>
    <string name="regist_username_error">用户名格式为英文字母、数字、汉字和@、.和下划线</string>
    <string name="regist_username_length_error">用户名输入不正确，请重新输入</string>
    <string name="regist_parent_identy_null">家长身份不能为空</string>
    <string name="regist_phone_error">手机号输入不正确，请重新输入</string>
    <string name="regist_password_error">密码输入不能和用户名一致</string>
    <string name="regist_password_length_error">密码输入格式为:英文大小写字母、数字、特殊字符，长度为6到16位之内</string>
    <string name="regist_password_check">两次密码输入不一致</string>
    <string name="regist_password_null">密码不能为空</string>
    <string name="regist_xueji_null">学籍号不能为空</string>
    <string name="regist_xueji_error">学籍号与学生姓名不匹配，请重新输入</string>
    <!-- 我的建议 -->
    <string name="my_advice_type">请选择投诉类型</string>
    <!-- 启动页面提示属于哪种版本 -->
    <string name="home_subtitle">学生/家长版</string>
	<!--  -->
	<string name="must_change_version">马上升级！马上升级！马上升级！重要的事情说三遍。升级吧，少年！</string>
</resources>