<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_my_garden_background"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title_main" />
    </RelativeLayout>
    <!-- 购物车没数据布局开始 -->

    <RelativeLayout
        android:id="@+id/rel_shopping_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/shopping_cart" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/shopcart_no_message"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_size_seven"
                android:text="@string/shopcart_guangguang"
                android:textColor="@color/color_gray" />

            <TextView
                android:id="@+id/bt_go_consult"
                android:layout_width="@dimen/main_size_ninty"
                android:layout_height="@dimen/main_size_thirty"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/main_size_twenty"
                android:background="@drawable/goshouye"
                android:gravity="center"
                android:text="@string/shopcart_goindex"
                android:textColor="@color/white" />
        </LinearLayout>
    </RelativeLayout>
    <!-- 购物车没数据结束 -->
    <!-- 购物车没网络布局开始 -->

    <TextView
        android:id="@+id/tv"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true" />

    <RelativeLayout
        android:id="@+id/rel_shopping_network_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/layout_no_network" />
    </RelativeLayout>
    <!-- 购物车没网络结束 -->

    <RelativeLayout
        android:id="@+id/rel_shopping_date"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:background="@color/color_my_garden_background"
        android:visibility="gone" >

        <com.sunsoft.zyebiz.b2e.wiget.ShopCartPullRefreshView
            android:id="@+id/refresh_root"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/color_my_garden_background"
            android:orientation="vertical" >

            <com.sunsoft.zyebiz.b2e.swipemenulistview.SwipeMenuListView
                android:id="@+id/shopping_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="90dp"
                android:background="@color/color_my_garden_background"
                android:divider="@color/color_my_garden_background"
                android:dividerHeight="10dp"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"
                android:visibility="visible" >
            </com.sunsoft.zyebiz.b2e.swipemenulistview.SwipeMenuListView>
        </com.sunsoft.zyebiz.b2e.wiget.ShopCartPullRefreshView>

        <LinearLayout
            android:id="@+id/shopcart_ll"
            android:layout_width="match_parent"
            android:layout_height="@dimen/main_size_forty"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/main_size_fifty_seven"
            android:layout_weight="0.0"
            android:background="@color/black"
            android:orientation="horizontal"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/main_size_forty"
                android:layout_gravity="center_vertical" >

                <TextView
                    android:id="@+id/tv_shopcart_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <CheckBox
                    android:id="@+id/shopcart_all"
                    android:layout_width="@dimen/main_size_twenty"
                    android:layout_height="@dimen/main_size_twenty"
                    android:layout_centerInParent="true"
                    android:layout_margin="@dimen/main_size_five"
                    android:background="@drawable/checkbox_shop"
                    android:button="@null"
                    android:focusable="false"
                    android:gravity="center_vertical" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_wenzi_check_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/shopcart_select_all"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/shopcart_heji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/main_size_ten"
                android:textColor="@color/white"
                android:textSize="@dimen/main_text_twelve" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_size_ten"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/shopcart_tv_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/shopcart_zong_e"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/shopcart_sum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/shopcart_tv_sum"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textColor="@color/red"
                    android:textSize="@dimen/main_text_twelve" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/shopcart_pay"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/main_size_ten"
                android:layout_weight="1"
                android:background="@color/color_gray" >

                <TextView
                    android:id="@+id/shopcart_pay_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:clickable="false"
                    android:text="@string/shopcart_jiesuan"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>