<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <include layout="@layout/title_main_back" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/regist_tishi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/main_size_ten"
                android:text="注册天使："
                android:textColor="@color/black"
                android:textSize="@dimen/main_text_fifteen"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_student_xueji"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/regist_xue_ji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入您孩子的学籍号"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_student_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/regist_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入您孩子的姓名"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_parent_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/regist_parnet_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入您的手机号"
                    android:numeric="integer"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:id="@+id/tv_yanzheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dp"
                    android:text="验证码："
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/edt_forget_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/tv_yanzheng"
                    android:background="@null"
                    android:hint="请输入验证码"
                    android:inputType="number"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />

                <TextView
                    android:id="@+id/forget_check_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_btn_yanzhengma"
                    android:padding="5dp"
                    android:text="获取验证码"
                    android:textColor="@color/color_yellow_ju"
                    android:textSize="@dimen/main_text_fifteen" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_parent_user_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <TextView
                    android:id="@+id/regist_parent_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_parent_name"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/regist_parent_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="请输入您的姓名"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />
            </LinearLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:id="@+id/jiazhangshenfen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_parent_identy"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <TextView
                    android:id="@+id/edt_regist_parent_shenfen"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/jiazhangshenfen"
                    android:background="@null"
                    android:hint="请选择家长身份"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />

                <TextView
                    android:id="@+id/bt_dropdown"
                    android:layout_width="15dp"
                    android:layout_height="10dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/down_arrow" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:id="@+id/tv_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_set_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/regist_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_new_password"
                    android:background="@null"
                    android:digits="@string/edt_password_input"
                    android:hint="6-20位字母，数字，字符"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />

                <Button
                    android:id="@+id/btn_visible"
                    android:layout_width="22dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/xiaoyanjing_biyan" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/main_size_ten" >

                <TextView
                    android:id="@+id/tv_confirm_new_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_confirm_password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/main_text_fifteen" />

                <EditText
                    android:id="@+id/edt_change_confirm_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/tv_confirm_new_password"
                    android:background="@null"
                    android:digits="@string/edt_password_input"
                    android:hint="请再次输入密码"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="@color/color_gray"
                    android:textSize="@dimen/main_text_fifteen" />

                <Button
                    android:id="@+id/btn_confirm_visible"
                    android:layout_width="22dp"
                    android:layout_height="18dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/xiaoyanjing_biyan" />
            </RelativeLayout>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/color_xian_kuang" />

            <TextView
                android:id="@+id/regist_confirm"
                android:layout_width="fill_parent"
                android:layout_height="40dp"
                android:layout_margin="@dimen/main_size_ten"
                android:background="@drawable/queren_regist"
                android:gravity="center"
                android:text="注册确认"
                android:textColor="@color/white" />

            <WebView
                android:id="@+id/regist_webview"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
              
                android:background="@color/color_light_blue" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>